package zadanie12;

interface ICustomer {
  public void saveData(Customer customer);

  public void readData(Customer customer);
}
