package zadanie12;

interface ISeller {
  public void saveData(Seller seller);

  public void readData(Seller seller);
}
