@startuml Faktura

class Customer {
  +name : string
  +taxID : string
  +setName()
  +getName()
  +setTaxID()
  +getTaxID()
}

class Seller {
  +name : string
  +taxID : string
  +setName()
  +getName()
  +setTaxID()
  +getTaxID()
}

class Invoice {
  +ID : int
  +invoicePersistent : IInvoice
  +customer : Customer
  +customerPersistent : ICustomer
  +seller : Seller
  +sellerPersistent : ISeller
  +elements : ArrayList<Element>
  +elementPersistent : IElement
  +getID()
  +setCustomer()
  +getCustomer()
  +setSeller()
  +getSeller()
  +addElement()
  +getElement()
  +saveCustomer()
  +readCustomer()
  +saveSeller()
  +readSeller()
  +saveElements()
  +readElements()
  +save()
  +read()
  +countSumToPay()
}

class Element {
  +amount : int
  +product : Product
  +setAmount()
  +setProduct()
  +setProductV()
  +getAmount()
  +getProduct()
}

class Product {
  +name : string
  +price : double
  +setName()
  +getName()
  +setPrice()
  +gtePrice()
}

class CustomerPersistent {
  +driver : ISQLDriver
  +insert : string
  +select : string
  +saveData(Product product)
  +readData(Product product)
}

class SellerPersistent {
  +driver : ISQLDriver
  +insert : string
  +select : string
  +saveData()
  +readData()
}


class ElementPersistent {
  +driver : ISQLDriver
  +productPersistent : IProduct
  +insert : string
  +select : string
  +saveData()
  +readData()
}

class ProductPersistent {
  +driver : ISQLDriver
  +insert : string
  +select : string
  +saveData(Product product)
  +readData(Product product)
}

class InvoicePersistent {
  +driver : ISQLDriver
  +customerPersistent : ICustomer
  +sellerPersistent : ISeller
  +insert : string
  +select : string
  +saveData()
  +readData()
  +getInvoiceID()
}

interface IElement {
  +saveData()
  +readData()
}

interface IProduct {
  +saveData()
  +readData()
}

interface ISeller {
  +saveData()
  +readData()
}

interface ICustomer {
  +saveData()
  +readData()
}

interface ISQLDriver {
  +getConnection()
}

interface IInvoice {
  +saveData()
  +readDataCustomer()
  +readDataSeller()
  +getInvoiceID()
}

class MysqlDriver {
  +connection : Connection
  +getConnection()
}

class DriverFactory {
  +getDriver()
}

class CustomerPersistent implements ICustomer
class ElementPersistent implements IElement
class SellerPersistent implements ISeller
class ProductPersistent implements IProduct
class InvoicePersistent implements IInvoice

class MysqlDriver implements ISQLDriver

Invoice "1" -- "*" Customer
Invoice "1" -- "*" Seller
Invoice "1" -- "*" Element
Element "1" -- "1" Product
ICustomer "1" -- "1" Invoice
ISeller "1" -- "1" Invoice
IElement "1" -- "1" Invoice
IProduct "1" -- "1" Invoice
IInvoice "1" -- "1" Invoice

ISQLDriver "1" -- "1" DriverFactory

ISQLDriver "1" -- "1" CustomerPersistent
ISQLDriver "1" -- "1" SellerPersistent
ISQLDriver "1" -- "1" ProductPersistent
ISQLDriver "1" -- "1" ElementPersistent
ISQLDriver "1" -- "1" InvoicePersistent

@enduml
